# comfyui-sampler-info

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE-CHECKLIST.md  __init__.py  biome.json  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json
.claude/rules/: api-conventions.md  code-style.md  dependencies.md  development.md  document-management.md  error-handling.md  testing.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-please.yml
docs/: health-history.json
docs/blueprint/: README.md  feature-tracker.json  manifest.json
docs/blueprint/adrs/: 0001-project-language.md  0002-frontend-only-plugin-architecture.md  0003-single-file-js-implementation.md  0004-static-json-corpus.md  0005-package-management-and-distribution.md  0006-ci-cd-github-actions.md  0007-testing-strategy.md  0008-widget-name-detection.md  0009-adopt-vitest.md  0010-adopt-typescript-bun-build.md  README.md
docs/blueprint/prds/: project-overview.md
docs/trps/: regression-gaps-initial-scaffold.md
screenshots/: Dockerfile  README.md  capture.mjs  entrypoint.sh  package.json  workflow.json
src/: index.ts
tests/: test_corpus.py  test_init.py
tests/js/: _smoke.test.js  sampler-info.test.js
tests/js/__mocks__/: app.js
web/data/: samplers.json  schedulers.json
web/js/: sampler-info.js
