[project]
name = "comfyui-sampler-info"
description = "Rich metadata + fuzzy-search picker dialog for ComfyUI's sampler_name / sampler / scheduler combo widgets. Tooltip with year / family / ODE order / good-for, plus a centered modal that replaces the cryptic native dropdown."
version = "0.1.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lauri Gates" }]
keywords = ["comfyui", "comfyui-nodes", "sampler", "scheduler", "ui", "tooltip", "picker", "fuzzy-search"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Graphics",
]

# Frontend-only pack — no runtime Python deps. The picker requires the
# modern Vue frontend's `widget.onPointerDown` hook, present since the
# 1.x line of comfyui-frontend-package.
dependencies = [
    "comfyui-frontend-package>=1.40",
]

[project.urls]
Repository = "https://github.com/laurigates/comfyui-sampler-info"
Issues = "https://github.com/laurigates/comfyui-sampler-info/issues"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
# TODO: register a Publisher at https://registry.comfy.org/ and replace
# this with the assigned PublisherId before the first publish. See
# RELEASE-CHECKLIST.md for the step-by-step.
PublisherId = "TODO-publisher-id"
DisplayName = "Sampler Info"
Icon = ""
